--- a/single.html
+++ b/single.html
@@ -145,6 +145,9 @@
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_12.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quia illo voluptatibus numquam inventore, ab asperiores molestiae distinctio atque nihil.</p>">
             <a href="#"><img src="images/foto_12.jpg" alt="IMage" class="img-fluid"></a>
           </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto-13.jpg" data-sub-html="<h4>Fading Light</h4><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quia illo voluptatibus numquam inventore, ab asperiores molestiae distinctio atque nihil.</p>">
+            <a href="#"><img src="images/foto-13.jpg" alt="IMage" class="img-fluid"></a>
+          </div>
          
     </div>
 
