--- a/single.html
+++ b/single.html
@@ -145,14 +145,23 @@
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_12.jpg" data-sub-html="<h4>Fading Light</h4><p></p>">
             <a href="#"><img src="images/foto_12.jpg" alt="IMage" class="img-fluid"></a>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto-13.jpg" data-sub-html="<h4>Fading Light</h4><p></p>">
-            <a href="#"><img src="images/foto-13.jpg" alt="IMage" class="img-fluid"></a>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_13.jpg" data-sub-html="<h4>Fading Light</h4><p></p>">
+            <a href="#"><img src="images/foto_13.jpg" alt="IMage" class="img-fluid"></a>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto-14.jpg" data-sub-html="<h4>Fading Light</h4><p></p>">
             <a href="#"><img src="images/foto_14.jpg" alt="IMage" class="img-fluid"></a>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_15.jpg" data-sub-html="<h4>Fading Light</h4><p></p>">
             <a href="#"><img src="images/foto_15.jpg" alt="IMage" class="img-fluid"></a>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_16.jpg" data-sub-html="<h4>Fading Light</h4><p></p>">
+            <a href="#"><img src="images/foto_16.jpg" alt="IMage" class="img-fluid"></a>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_17.jpg" data-sub-html="<h4>Fading Light</h4><p></p>">
+            <a href="#"><img src="images/foto_17.jpg" alt="IMage" class="img-fluid"></a>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_18.jpg" data-sub-html="<h4>Fading Light</h4><p></p>">
+            <a href="#"><img src="images/foto_18.jpg" alt="IMage" class="img-fluid"></a>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_19.jpg" data-sub-html="<h4>Fading Light</h4><p></p>">
             <a href="#"><img src="images/foto_19.jpg" alt="IMage" class="img-fluid"></a>
