--- a/single.html
+++ b/single.html
@@ -148,7 +148,7 @@
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_13.png" data-sub-html="<h4>Fading Light</h4><p></p>">
             <a href="#"><img src="images/foto_13.png" alt="IMage" class="img-fluid"></a>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto-14.png" data-sub-html="<h4>Fading Light</h4><p></p>">
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_14.png" data-sub-html="<h4>Fading Light</h4><p></p>">
             <a href="#"><img src="images/foto_14.png" alt="IMage" class="img-fluid"></a>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_15.png" data-sub-html="<h4>Fading Light</h4><p></p>">
@@ -186,6 +186,21 @@
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_26.png" data-sub-html="<h4>Fading Light</h4><p></p>">
             <a href="#"><img src="images/foto_26.png" alt="IMage" class="img-fluid"></a>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_27.png" data-sub-html="<h4>Fading Light</h4><p></p>">
+            <a href="#"><img src="images/foto_27.png" alt="IMage" class="img-fluid"></a>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_28.png" data-sub-html="<h4>Fading Light</h4><p></p>">
+            <a href="#"><img src="images/foto_28.png" alt="IMage" class="img-fluid"></a>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_29.png" data-sub-html="<h4>Fading Light</h4><p></p>">
+            <a href="#"><img src="images/foto_29.png" alt="IMage" class="img-fluid"></a>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_30.png" data-sub-html="<h4>Fading Light</h4><p></p>">
+            <a href="#"><img src="images/foto_30.png" alt="IMage" class="img-fluid"></a>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_31.png" data-sub-html="<h4>Fading Light</h4><p></p>">
+            <a href="#"><img src="images/foto_31.png" alt="IMage" class="img-fluid"></a>
           </div>
          
          
