--- a/single.html
+++ b/single.html
@@ -132,7 +132,7 @@
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_8.jpg" data-sub-html="<h4>Fading Light</h4><p></p>">
             <a href="#"><img src="images/foto_8.jpg" alt="IMage" class="img-fluid"></a>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_9.jpg" data-sub-html="<h4>Fading Light</h4><p></p>">
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 item" data-aos="fade" data-src="images/foto_9.png" data-sub-html="<h4>Fading Light</h4><p></p>">
             <a href="#"><img src="images/foto_9.png" alt="IMage" class="img-fluid"></a>
           </div>
 
